--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,19 @@
   <artifactId>lab_ssvv_v02</artifactId>
   <version>1.0-SNAPSHOT</version>
   <build>
+
+      <pluginManagement>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M5</version>
+          </plugin>
+        </plugins>
+      </pluginManagement>
+
     <plugins>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -30,13 +42,13 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.12</version>
+      <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
-      <version>5.4.0</version>
+      <version>5.8.2</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
