--- a/lab5/2022PrjSerenityJUnit/build.gradle
+++ b/lab5/2022PrjSerenityJUnit/build.gradle
@@ -1,6 +1,7 @@
 repositories {
     jcenter()
     mavenLocal()
+    mavenCentral()
 }
 
 buildscript {
@@ -22,8 +23,8 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    compile 'net.serenity-bdd:serenity-core:2.3.2'
-    compile 'net.serenity-bdd:serenity-junit:2.3.2'
-    testCompile('junit:junit:4.12')
+    implementation 'net.serenity-bdd:serenity-core:3.2.5'
+    implementation 'net.serenity-bdd:serenity-junit:3.2.5'
+    testImplementation('junit:junit:4.13.2')
 }
 gradle.startParameter.continueOnFailure = true
