fixed tests + report

--- a/lab5/lab5TakeHome2/lab4TakeHome/serenity.properties
+++ b/lab5/lab5TakeHome2/lab4TakeHome/serenity.properties
@@ -9,6 +9,8 @@ headless.mode = false
 
 # Root package for any JUnit acceptance tests
 serenity.test.root=org.example.features
+serenity.reports.show.step.details=true
+
 
 # Customise your riequirements hierarchy
 #serenity.requirement.types=feature, story
